<resources>
    <string name="app_ID">300011869943</string>
    <string name="app_name">记忆胶囊</string>
    <string name="text_save">保存</string>
    <string name="note_work">工作</string>
    <string name="note_study">学习</string>
    <string name="note_live">生活</string>
    <string name="note_travel">旅行</string>
    <string name="note_diary">日记</string>
    <string name="menu_listabout">列表清单</string>
    <string name="menu_userseting">用户设置</string>
    <string name="menu_datachart">数据分析</string>
    <string name="menu_serect">我的秘密</string>
    <string name="menu_noteabout">详情</string>
    <string name="menu_notehide">隐藏</string>
    <string name="menu_notedelete">删除</string>
    <string name="menu_notechange">修改</string>
    <string name="menu_friendspace">分享</string>
    <string name="listactivity_toolbar_title">列表清单</string>
    <string name="listactivity_toolbar_title_secret">秘密</string>
    <string name="addactivity_title">编辑备忘录</string>
    <string name="menu_addfloatingbutton_people">人物</string>
    <string name="menu_addfloatingbutton_type">类型</string>
    <string name="menu_addfloatingbutton_time">日期</string>
    <string name="menu_addfloatingbutton_clock">闹钟</string>
    <string name="menu_addfloatingbutton_location">地点</string>
    <string name="menu_addfloatingbutton_photo">图片</string>
    <string name="add_textview_savefile">保存</string>
    <string name="add_edittext_people">输入相关人物</string>
    <string name="add_dialog_ok">确定</string>
    <string name="add_dialog_cancle">取消</string>
    <string name="add_dialog_toolbar_title">编辑</string>
    <string name="add_dialog_people_title">人物</string>
    <string name="add_edittext_location">输入地址信息</string>
    <string name="add_dialog_notetype_title">选择标签</string>
    <string name="add_dialog_time_title">选择时间</string>
    <string name="add_dialog_date_title">选择日期</string>
    <string name="add_dialog_location_title">地址</string>
    <string name="add_dialog_savenote_message">是否保存修改</string>
    <string name="add_dialog_savenote_save">保存</string>
    <string name="add_dialog_savenote_cancel">取消</string>
    <string name="noteinfoactivity_toolbar_title">详情</string>
    <string name="searchtexthint">搜索...</string>
    <string name="sharedImageView">sharedimageview</string>
    <string name="sharedTextView">sharedtextview</string>
    <string name="about_application">code by 尽途\ndesign by 尽途\n如有问题请联系 zqlsw@qq.com</string>
    <string name="text_NotelistEmpty">还没有记录，点击加号开始创建吧！</string>
</resources>
