<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:title="@string/menu_listabout"></item>
    <item
        android:id="@+id/action_serect"
        android:orderInCategory="100"
        android:title="@string/menu_serect">
    </item>
    <item
        android:id="@+id/action_camera"
        android:orderInCategory="100"
        android:title="拍摄 创建">
    </item>
    <item
        android:id="@+id/action_seting"
        android:orderInCategory="100"
        android:title="@string/menu_userseting"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_001"
        android:orderInCategory="100"
        android:title="搜索"
        app:showAsAction="always">
    </item>
</menu>