<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:gravity="center"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_dialog_notetype_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/add_dialog_typenote_work"
        android:background="@drawable/background_dialog_item"
        android:orientation="horizontal"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_work"
            android:layout_marginLeft="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/note_work"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/add_dialog_typenote_study"
        android:background="@drawable/background_dialog_item"
        android:orientation="horizontal"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_study"
            android:layout_marginLeft="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/note_study"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/add_dialog_typenote_live"
        android:background="@drawable/background_dialog_item"
        android:orientation="horizontal"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_live"
            android:layout_marginLeft="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/note_live"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/add_dialog_typenote_diary"
        android:background="@drawable/background_dialog_item"
        android:orientation="horizontal"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_diary"
            android:layout_marginLeft="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/note_diary"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/add_dialog_typenote_travel"
        android:background="@drawable/background_dialog_item"
        android:orientation="horizontal"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_travel"
            android:layout_marginLeft="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/note_travel"/>
    </LinearLayout>

</LinearLayout>