<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_chart"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:minHeight="?attr/actionBarSize"
        android:elevation="10dp"
        app:titleTextColor="@android:color/white"
        android:theme="@style/Zql_theme_toolbar"
        app:layout_scrollFlags="scroll|enterAlways"
        style="@style/Zql_theme_toolbar"
        app:title="">
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/chart_relativelayout"
        android:layout_below="@id/chart_spinner"
        android:layout_above="@id/chart_lineaer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </RelativeLayout>
    <org.angmarch.views.NiceSpinner
        android:id="@+id/chart_spinner"
        android:layout_gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_chart"
        android:layout_marginTop="5dp"
        android:textSize="16sp">
    </org.angmarch.views.NiceSpinner>
    <LinearLayout
        android:id="@+id/chart_lineaer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:background="@color/colorwork" />
                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_work"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:background="@color/colorstudy" />
                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_study"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:background="@color/colorlive" />
                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_live"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:background="@color/colordiary" />
                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_diary"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:background="@color/colortravel" />
                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_travel"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>